syntax = "proto3";

option csharp_namespace = "Unicorn.Core.Development.ServiceHost.Grpc.Protos.MultiplicationGrpcService";

package Definition;

service MultiplicationGrpcService{
	rpc Multiply(MultiplicationRequest) returns (MultiplicationResponse);
}

 message MultiplicationRequest{
	int32 FirstOperand = 1;
	int32 SecondOperand = 2;
};

message MultiplicationResponse{
	int32 Result = 1;
};